--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-DB_HOST=datacode-datacode.d.aivencloud.com
-DB_USER=avnadmin
-DB_PASSWORD=AVNS_8E64xznbT9AA1SAok9F
-DB_NAME=defaultdb
-DB_PORT=15555
+# Replace the placeholder values below with your actual database credentials.
+DB_HOST=your_database_host
+DB_USER=your_database_user
+DB_PASSWORD=your_database_password
+DB_NAME=your_database_name
+DB_PORT=3306
+ORIGINS=http://localhost:3000,http://localhost:8080
