--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASSWORD=AVNS_8E64xznbT9AA1SAok9F
 DB_NAME=defaultdb
 DB_PORT=15555
 ORIGINS=http://localhost:3000,http://localhost:8080
+API_URL=https://customerservice-mocha.vercel.app
