--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,15 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api-docs/(.*)",
+      "dest": "api/index.js"
+    },
+    {
+      "src": "/api-docs",
+      "dest": "api/index.js"
+    },
+    {
+      "src": "/((?!api-docs).*)",
       "dest": "api/index.js"
     }
   ]
